<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DexTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="submit_score">Submit Score</string>
    <string name="submit">Submit</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_main_menu">DexTracker</string>
    <string name="main_menu">DexTracker</string>
    <string name="game_one">Sequential</string>
    <string name="game_two">Type</string>
    <string name="game_three">Smash</string>
    <string name="settings">Settings</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="title_activity_game_one">GameOne</string>
    <string name="title_activity_game_two">GameTwo</string>
    <string name="title_activity_game_three">GameThree</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">BlankLeaderboarad</string>
    <string name="title_activity_type_game">TypeGame</string>
    <string name="title_activity_analysis">Analysis</string>
    <string name="app_id">642099303288</string>
    <string name="sequential_leaderboard">CgkI-KbngNgSEAIQAQ</string>
    <string name="type_right_leaderboard">CgkI-KbngNgSEAIQBQ</string>
    <string name="type_left_leaderboard">CgkI-KbngNgSEAIQBA</string>
    <string name="smash_leaderboard">CgkI-KbngNgSEAIQAw</string>
    <string name="title_activity_leaderboard_menu">Leaderboard Menu</string>
    <string name="title_activity_type_right_game">TypeRightGame</string>
    <string name="begin_type_achiv">CgkI-KbngNgSEAIQBg</string>
    <string name="average_type_achiv">CgkI-KbngNgSEAIQBw</string>
    <string name="expert_type_achiv">CgkI-KbngNgSEAIQCA</string>
    <string name="expert_smash_achiv">CgkI-KbngNgSEAIQCQ</string>
    <string name="goldfinger_achiv">CgkI-KbngNgSEAIQCg</string>
    <string name="achievement_quick_fingers">CgkI-KbngNgSEAIQDg</string>
    <string name="achievement_quicker_fingers">CgkI-KbngNgSEAIQDw</string>
    <string name="achievement_quickest_fingers">CgkI-KbngNgSEAIQEA</string>

    <string-array name="game_modes">
        <item>Numbers</item>
        <item>Letters Left</item>
        <item>Letters Right</item>
        <item>Smash</item>
    </string-array>

    <string name="title_activity_splash_screen">DexTracker</string>

</resources>