<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.navigationapp.MainMenu" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_menu"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/game1"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:onClick="btnGameOne_onClick"
				android:drawableLeft="@drawable/numbers"
                android:text="@string/game_one" />

            <Button
                android:id="@+id/game2"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:onClick="btnGameTwo_onClick"
                android:drawableLeft="@drawable/abc"
                android:text="@string/game_two" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/game3"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:onClick="btnGameThree_onClick"
                android:drawableLeft="@drawable/hammer"
                android:text="@string/game_three" />

            <Button
                android:id="@+id/btnLeaderboard"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:onClick="btnLeaderboard_onClick"
                android:drawableLeft="@drawable/leaders"
                android:text="@string/leaderboard" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>